fixed the social icons layout, not to be affected by whitespace anymore

--- a/src/css/1-components/footer.css
+++ b/src/css/1-components/footer.css
@@ -9,6 +9,10 @@ footer {
 }
 
 footer .social {flex: auto;}
+footer .social-icons {
+	display: flex;
+	flex: none;
+}
 footer .social-icons a {
 	font-size: 29px;
 	padding: 0 10px;
